# openclaw

./: .gitignore  PROMPT.md  activity.md  client.py  prd.md  project.md  pyproject.toml  test_e2e_cheeko.py  test_latency_errors.py  token_server.py  voice_client.py
.claude/: settings.json  settings.local.json
.claude/commands/: create-prd.md
.github/: DESCRIPTION.md
frontend/: app.js  index.html  style.css
plugins/: __init__.py  edge_tts_plugin.py
realtimeprd/: PROMPT.md  activity.md  prd.md
