[project]
name = "openclaw-voice-agent"
version = "0.1.0"
description = "Voice-based personal assistant using LiveKit, OpenClaw, and Edge TTS"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents~=1.3",
    "livekit-plugins-silero~=1.3",
    "livekit-plugins-turn-detector~=1.3",
    "livekit-plugins-openai~=1.3",
    "livekit-plugins-deepgram~=1.3",
    "edge-tts",
    "python-dotenv",
    "pydub",
    "aiohttp",
]
